# lottery-analysis

./: .gitignore  README.md  bit_manipulations.py  pyproject.toml
cash345/scripts/: back_test.py  bit_manipulations.py  cash5.py  cash5_scraper.py  join_cash5csv.py  process_cash5.py  scrape_cash5.py  scrape_cash5_prizes.py  utils.py
keno/: .clang-format  CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  count_all_numbers.sql  count_winning_numbers.sql  get_all_ticket_attrs.sql  get_match_percentage.sql  get_ticket_attrs.sql  graph_info.json  keno.py  numbers_played_matched.sql
keno/include/: bit_manipulations.cpp  explode_wagers.cpp
keno/scripts/: bit_manipulations.py  concat_files.py  count_lines.py  count_lines.sh  keno.py  keno_passf.py  keno_v2.py  schemas.py  transfer.sh  utils.py
keno/sql/: count_transaction_numbers.sql  explode_wagers.sql  get_match_percentage.sql  numbers_played_matched.sql  time_prize_distribution.sql
keno/sql/tables/: drawings.sql  numbers_wagered.sql  wagers.sql
twc/: format_id.sql  pivot_by.sql  process_questions.py  sql_keywords.py  tmp.sql  tmp.txt  twc-utils.js  twc.py  twc_to_sql.py
