[tool.poetry]
name = "lottery-analysis"
version = "0.1.0"
description = ""
authors = ["Mike Babb <mike7400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
mysql-connector-python = "^8.0.23"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
